<resources>
    <string name="app_name">Cab Driver</string>
    <string name="punch_line">Your punch line here</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="password">Password</string>
    <string name="forgot_pass1">Forgot Password?</string>
    <string name="click_here">Click Here</string>
    <string name="login">Login</string>
    <string name="new_user">New User?</string>
    <string name="signup_for_new">Singup For New Account</string>
    <string name="signup">Signup</string>
    <string name="email">Email</string>
    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="submit">Submit</string>
    <string name="password_will_send_msg">Password will be send on your registered number</string>
    <string name="home">Home</string>
    <string name="accounts">Accounts</string>
    <string name="payments">Payments</string>
    <string name="share">Share</string>
    <string name="about_us">About Us</string>
    <string name="logout">Logout</string>
    <string name="title_activity_maps">Map</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="update">Update</string>
    <string name="recent_rides">Recent Rides</string>
    <string name="continue1">Continue</string>
    <string name="car_category">Car Category</string>
    <string name="licence_no">Licence Number</string>
    <string name="veh_number">Vehical Number</string>
    <string name="vehical_setup">Vehical Setup</string>
    <string name="ride_history">Ride History</string>
    <string name="bill_his">Bill History</string>
    <string name="settings">Settings</string>
    <string name="payout">Payout</string>
    <string name="update_dt_here">Update Details Here</string>
    <string name="user_settings">User Settings</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms"><![CDATA[Terms & Conditions]]></string>
    <string name="other">Other</string>
    <string name="faq">FAQ</string>
    <string name="about">About Us</string>
    <string name="change_password">Change Password</string>
    <string name="location">Location</string>
    <string name="wallet">Wallet</string>
    <string name="change">Change</string>
    <string name="old_pass">Old Password</string>
    <string name="new_pass">New Password</string>
    <string name="re_new_pass">Re-Enter New Password</string>
    <string name="loading">Loading</string>
    <string name="ok">Ok</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="otp_here">Otp Here</string>
    <string name="my_rides">My Rides</string>
    <string name="email_add">Email Address</string>
    <string name="intr_msg">Please connect to Internet</string>
    <string name="edit_error_msg">Please Enter</string>
    <string name="pass_lngth_error">Password Should have Alteast 6 Char</string>
    <string name="invalid_email">Invalid Email Address</string>
    <string name="invalid_mobile">Invalid Mobile</string>
    <string name="plase_ch">Please Choose</string>
    <string name="email_exist">Email Already Exist</string>
    <string name="mob_exist">Mobile Number Already Exist</string>
    <string name="signup_succ">Signup Successful</string>
    <string name="invalid_password">Invalid Password</string>
    <string name="ch_car_category">Choose Car Type</string>
    <string name="profile_updated">Profile Updated</string>
    <string name="same_pass_error">Please Enter Same New Passwords</string>
    <string name="invalid_old_password">Invalid Old Password</string>
    <string name="password_ch">Password Updated</string>
    <string name="firebase_storage_url">gs://rideshare-6f02f.appspot.com</string>
    <string name="upload_field">Upload Failed</string>
    <string name="messages">Messages</string>
    <string name="noti_key">AIzaSyAPsCcfJty5Uz-YEIa8MbKTDRB0Xtqb0CQ</string>
    <string name="received">Received</string>
    <string name="ride_com_msg">Ride has completed</string>
    <string name="complete">Complete</string>
    <string name="scheduled_rides">Scheduled Rides</string>
    <string name="partner_fee">Partner Fee</string>
    <string name="milage">Milage</string>
    <string name="balance">Balance</string>
    <string name="payment_type">Payment Type</string>
    <string name="comfort_level">Comfort Level</string>
    <string name="start1">Start</string>
    <string name="economy">Economy</string>
    <string name="comfort">Comfort</string>
    <string name="auth_failed">Authentication Failed</string>
    <string name="reviews">Reviews</string>
    <string name="support_request">Request Support</string>
    <string name="title">Title</string>
    <string name="details">Details</string>
    <string name="login_msg">Please Enter Details</string>
    <string name="refer_to_frnd">Refer to a Friend</string>
</resources>
