<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home_icon"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_veh_setup"
            android:icon="@drawable/veh_icon"
            android:title="@string/vehical_setup" />
        <item
            android:id="@+id/nav_ride_history"
            android:icon="@drawable/history_icon"
            android:title="@string/ride_history" />
        <item
            android:id="@+id/nav_bill_history"
            android:icon="@drawable/user_icon"
            android:title="@string/scheduled_rides" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/settings_icon"
            android:title="@string/settings" />

        <item
            android:id="@+id/nav_payout"
            android:icon="@drawable/wallet_icon"
            android:title="@string/payout" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout_icon"
            android:title="@string/logout" />

    </group>

</menu>
